--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   
   http: ^0.12.0+2
   youtube_player_flutter: ^6.0.3+2
+  screenshot: ^0.2.0
+  native_screenshot: ^0.0.4
 
 dev_dependencies:
   flutter_test:
